--- a/package.json
+++ b/package.json
@@ -12,13 +12,17 @@
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/multer": "^1.4.7",
     "nodemon": "^2.0.15",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.5.2"
   },
   "dependencies": {
+    "@types/cors": "^2.8.12",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "knex": "^0.95.14",
+    "multer": "^1.4.3",
     "sqlite3": "^5.0.2"
   }
 }
